--- a/ConsumerApp/package.json
+++ b/ConsumerApp/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/adapter-nextjs": "^1.0.11",
     "@glidejs/glide": "^3.6.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
@@ -20,15 +21,16 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "^10.4.14",
+    "aws-amplify": "^6.0.11",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
+    "eslint-config-next": "^14.0.4",
     "framer-motion": "^10.12.10",
     "lodash": "^4.17.21",
-    "next": "13.4.2",
+    "next": "^14.0.4",
     "postcss": "^8.4.23",
     "rc-slider": "^10.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.1.0",
     "react-player": "^2.12.0",
     "react-swipeable": "^7.0.0",
