--- a/OwnerApp/package.json
+++ b/OwnerApp/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/adapter-nextjs": "^1.0.13",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@glidejs/glide": "^3.6.0",
@@ -23,11 +24,12 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "^10.4.14",
+    "aws-amplify": "^6.0.13",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.10",
     "lodash": "^4.17.21",
-    "next": "13.4.2",
+    "next": "^14.1.0",
     "postcss": "^8.4.23",
     "rc-slider": "^10.1.1",
     "react": "18.2.0",
