[OWNER] - Business Details
business details page done

also added changes to graphql schemas

--- a/OwnerApp/.graphqlconfig.yml
+++ b/OwnerApp/.graphqlconfig.yml
@@ -2,13 +2,13 @@ projects:
   ownerapp:
     schemaPath: src/graphql/schema.json
     includes:
-      - src/graphql/**/*.js
+      - src/graphql/**/*.ts
     excludes:
       - ./amplify/**
     extensions:
       amplify:
-        codeGenTarget: javascript
-        generatedFileName: ''
+        codeGenTarget: typescript
+        generatedFileName: "src/API.ts"
         docsFilePath: src/graphql
 extensions:
   amplify:
