--- a/OwnerApp/package.json
+++ b/OwnerApp/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.10",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.316.0",
     "next": "^14.1.0",
