--- a/ConsumerApp/amplify/backend/backend-config.json
+++ b/ConsumerApp/amplify/backend/backend-config.json
@@ -1,22 +1,5 @@
 {
-  "api": {
-    "consumerapp": {
-      "dependsOn": [],
-      "output": {
-        "authConfig": {
-          "additionalAuthenticationProviders": [],
-          "defaultAuthentication": {
-            "apiKeyConfig": {
-              "apiKeyExpirationDays": 7
-            },
-            "authenticationType": "API_KEY"
-          }
-        }
-      },
-      "providerPlugin": "awscloudformation",
-      "service": "AppSync"
-    }
-  },
+  "api": {},
   "auth": {
     "ConsumerApp": {
       "customAuth": false,
