Add and push amplify auth to prod backend

--- a/OwnerApp/amplify/backend/backend-config.json
+++ b/OwnerApp/amplify/backend/backend-config.json
@@ -18,7 +18,7 @@
     }
   },
   "auth": {
-    "ownerappe620064a": {
+    "ownerappcb9f37f7": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
