Adding Storage to Dev Backend

--- a/OwnerApp/amplify/backend/backend-config.json
+++ b/OwnerApp/amplify/backend/backend-config.json
@@ -69,5 +69,12 @@
         }
       ]
     }
+  },
+  "storage": {
+    "OwnerApp": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3"
+    }
   }
 }
