Add storage to prod backend and push to amplify

--- a/OwnerApp/amplify/backend/backend-config.json
+++ b/OwnerApp/amplify/backend/backend-config.json
@@ -71,7 +71,7 @@
     }
   },
   "storage": {
-    "OwnerApp": {
+    "Prod": {
       "dependsOn": [],
       "providerPlugin": "awscloudformation",
       "service": "S3"
