Revert "Add storage to prod backend and push to amplify"
This reverts commit 3c63bd84fe8e2e053f56c695c44e54983ac9d0d6.

--- a/OwnerApp/amplify/backend/backend-config.json
+++ b/OwnerApp/amplify/backend/backend-config.json
@@ -71,7 +71,7 @@
     }
   },
   "storage": {
-    "Prod": {
+    "OwnerApp": {
       "dependsOn": [],
       "providerPlugin": "awscloudformation",
       "service": "S3"
