Revert "Merge branch 'dev'"
This reverts commit 544ed7010828b4f3f8a4200b82a87b9ea48b2559, reversing
changes made to 194e86f795da458d69a93571377b2164d419e213.

--- a/OwnerApp/amplify/backend/backend-config.json
+++ b/OwnerApp/amplify/backend/backend-config.json
@@ -18,7 +18,7 @@
     }
   },
   "auth": {
-    "ownerappcb9f37f7": {
+    "ownerappe620064a": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
